[metadata]
name = xtremcache
version = 1.0.0
author = xtrembuffalo
author_email = tristan.cladet@gmail.com
description = Handle generic file and directories caching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xtrembuffalo/xtremcache
project_urls =
    Bug Tracker = https://github.com/xtrembuffalo/xtremcache/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = xtremcache